# findexer

./: Cargo.toml  Makefile  README.md  findex-requirements.md
.claude/: settings.local.json
src/: cli.rs  discovery.rs  file_meta.rs  indexer.rs  lib.rs  main.rs  search.rs  state.rs
src/db/: mod.rs
src/db/migrations/: V1__initial_schema.sql
tests/: integration_test.rs
thoughts/shared/plans/: 2026-03-04-findex-file-indexer.md
