[package]
name = "findex"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.31", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }
thiserror = "1.0"
directories = "5.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
walkdir = "2.5"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
comfy-table = "7.1"
indicatif = "0.17"

[dev-dependencies]
tempfile = "3.10"
